# wamr-wasi-i2c

./: .gitignore  README.md  app.code-workspace  driver.code-workspace  justfile
benchall/: Cargo.toml
benchall/benches/: bench_crit.rs  bench_single.rs
benchall/benches/modules/: crit_singles.rs  crit_tests.rs  mod.rs
benchall/src/: dhat.rs
guest-as-application/: build.sh  justfile
guest-as-application/benchall/: Cargo.toml
guest-as-application/benchall/.cargo/: config.toml
guest-as-application/benchall/benches/: bench_crit.rs  bench_single.rs  crit_bench.rs  crit_tests.rs
guest-as-application/benchall/benches/modules/: crit_singles.rs  crit_tests.rs  mod.rs
guest-as-application/benchall/src/: dhat.rs  dhat_tests.rs  main.rs  perf.rs  pprof.rs
guest-as-application/guest/: Cargo.toml
guest-as-application/guest/.cargo/: config.toml
guest-as-application/guest/src/: lib.rs  main.rs
guest-as-application/host/: Cargo.toml  dhat-heap.json  host  test.wasm
guest-as-application/host/.cargo/: config.toml
guest-as-application/host/benches/: crit_bench.rs  dhat.rs  dhat_bench.rs
guest-as-application/host/src/: hardware_manager.rs  host_functions.rs  i2c_commons.rs  lib.rs  main.rs  manager.rs  permission_manager.rs  wamr_manager.rs
guest-as-application/host/wasmodules/: guest.wasm
guest-as-application/native_impl/: Cargo.toml
guest-as-application/native_impl/src/: lib.rs  main.rs
guest-as-application/wamr_impl/: Cargo.toml
guest-as-application/wamr_impl/src/: host_functions.rs  main.rs  permission_manager.rs  wamr_manager.rs
guest-as-application/wasip1-i2c/: Cargo.toml
guest-as-application/wasip1-i2c-guest/: Cargo.toml
guest-as-application/wasip1-i2c-guest/src/: lib.rs
guest-as-application/wasip1-i2c-lib/src/: common.rs  guest.rs  lib.rs
guest-as-application/wasip1-i2c/src/: lib.rs
guest-as-application/wasip2-i2c-guest/: Cargo.toml
guest-as-application/wasip2-i2c-guest/src/: bindings.rs  lib.rs
guest-as-application/wasip2-i2c-guest/wit/: pingpong.wit
guest-as-application/wasmtime_impl/: Cargo.toml  expanded_bindings.rs
guest-as-application/wasmtime_impl/src/: bindings.rs  lib.rs  main.rs
guest-as-application/wit/: pingpong.wit
guest-as-driver/host/src/: main.rs
native_impl/: Cargo.toml
native_impl/src/: lib.rs  main.rs
no_std/: justfile
no_std/guest-as-application/guest/src/: lib.rs
no_std/guest-as-application/host/src/: host_functions.rs
no_std/guest-as-application/wasip1-i2c/src/: lib.rs
no_std/guest-as-driver/host/src/: host_functions.rs  main.rs
results/: benchmark.R
wamr_impl/: Cargo.toml
wamr_impl/src/: hardware_manager.rs  host_functions.rs  lib.rs  main.rs  permission_manager.rs  wamr_manager.rs
wasip1-i2c-guest/.cargo/: config.toml
wasip1-i2c-guest/src/: lib.rs
wasip1-i2c-lib/: Cargo.toml
wasip1-i2c-lib/src/: guest.rs
wasip2-i2c-guest/: Cargo.toml
wasip2-i2c-guest/src/: bindings.rs  lib.rs
wasmtime_impl/: Cargo.toml
wasmtime_impl/src/: bindings.rs  lib.rs  main.rs  wasmtime_manager.rs
wit/: pingpong.wit
