[package]
name = "wasmtime_impl"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
embedded-hal = "1.0.0"
hashbrown = {version = "0.15.5", default-features = false, features = ["default-hasher", "inline-more"]}
linux-embedded-hal = "0.4.0"
spin = "0.10.0"
wasmtime = {version = "35.0.0", default-features = false, features = ["component-model", "cranelift", "runtime"]}

[lib]
name = "wasmtime_impl"
crate-type = ["lib"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[[bin]]
name = "wasmtime_run"
path = "src/main.rs"
bench = false
