[package]
name = "host"
version = "0.1.0"
edition = "2024"

[dependencies]
wamr-rust-sdk = { git = "https://github.com/bytecodealliance/wamr-rust-sdk", tag = "v1.1.0" }
wasip1-i2c = { version = "0.1.0", path = "../wasip1-i2c" }
linux-embedded-hal = "0.4.0"
embedded-hal = "1.0.0"

[dev-dependencies]
dhat = "0.3.3"
inventory = "0.3.20"
serde_json = "1.0.141"

[lib]
name = "host"
crate-type = ["lib"]

[[bin]]
name = "host"
path = "src/main.rs"

[[bench]]
harness = false
name = "dhat"