[package]
name = "host"
version = "0.1.0"
edition = "2024"

[dependencies]
wamr-rust-sdk = { git = "https://github.com/bytecodealliance/wamr-rust-sdk", tag = "v1.1.0" }
wasip1-i2c = { version = "0.1.0", path = "../wasip1-i2c" }
linux-embedded-hal = "0.4.0"
embedded-hal = "1.0.0"

[dev-dependencies]
dhat = "0.3.3"
inventory = "0.3.20"
serde_json = "1.0.141"
criterion = { version = "0.7.0", features = ["html_reports"]}

[lib]
name = "host"
crate-type = ["lib"]
bench = false

[profile.bench]
debug = 1

[profile.release]
debug = 1

[profile.dev]
debug = 1

[[bin]]
name = "host"
path = "src/main.rs"
bench = false

[[bench]]
name = "dhat_bench"
harness = false
bench = true

[[bench]]
name = "crit_bench"
harness = false
bench = true